Resolve overflow issues

--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 480px;
   height: 100%;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 
